tests/compile_errors/match-duplicate-condition-number.buzz
// Duplicate `match` condition
test "match duplicate numeric condition" {
    _ = match (1) {
        1 -> "int",
        1.0 -> "double",
        else -> "other",
    };
}
